fixed alignment on header and news

--- a/src/components/News.css
+++ b/src/components/News.css
@@ -39,11 +39,13 @@
 }
 .news-description {
     font-size: 18px;
+    width: 100%;
 }
 .news-img {
     display: block;
     height: 130px;
     width: 200px;
+    border-bottom-left-radius: 5px;
 }
 .news-icon {
     font-size: -webkit-xxx-large;
